# business_scrapper

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
app/: main.py  schemas.py
app/core/: config.py  logging_config.py
app/db/: __init__.py  models.py  session.py
app/scraper/: coordinator.py  extractor.py  fetcher.py  heuristics.py  structured.py  utils.py
app/services/: __init__.py  ids.py  repository.py  scheduler.py
prisma/: schema.prisma
tests/: test_coordinator.py  test_extractor.py
tests/fixtures/: sample_heuristic.html  sample_nav.html  sample_structured.html
