[tool.poetry]
name = "ai-crawler"
version = "0.1.0"
description = "High-speed concurrent scraper API for business listing aggregation"
authors = ["GitHub Copilot <copilot@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
httpx = "^0.27.0"
selectolax = "^0.3.17"
orjson = "^3.10.5"
extruct = "^0.16.0"
pydantic-settings = "^2.2.1"
cachetools = "^5.3.3"
loguru = "^0.7.2"
lxml = ">=4.9,<5.0"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
cuid2 = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
respx = "^0.20.2"
ruff = "^0.4.2"

[tool.poetry.scripts]
ai-crawler = "app.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
